[package]
name = "bbrs"
version = "0.1.0"
authors = ["pierwill <pierwill@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
rustyline = "7.1.0"
